--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,6 +19,10 @@ jobs:
       run: |
         npm install
         npm run build
+    - uses: actions/upload-artifact@v3.0.0
+      with:
+        name: webpack artifacts
+        path: public/
     
   test:
     runs-on: ubuntu-latest
